--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                                             and investigating effective connectivity in stroke neurorehabilitation (Manabe et al. 2023 and 
                                             <a href="https://ieeexplore.ieee.org/abstract/document/10317207" target="_blank" rel="nooper" style="color: rgb(20, 120, 110)">Kanaizuka et al. 2023</a>). 
                                             <br><br>
-                                            Projects page will be soon updated!
+                                            <!-- Projects page will be soon updated! -->
                                             <br><br>
 
                                         </p>
