--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="description" content="Main" />
         <meta name="author" content="Takahiro Manabe" />
         <title>Takahiro Manabe - About</title>
+
+        <meta name="robots" content="noimageindex">
         
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
