--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                                             while also gaining experience as a research assistant at the University at Buffalo and the University of Lincoln under 
                                             <a href="https://www.birmingham.ac.uk/staff/profiles/metabolism-systems/dutta-anirban" target="_blank" rel="nooper" style="color: rgb(20, 120, 110)"> Dr. Anirban Dutta</a>.
                                             <br><br>
-                                            My main research focus is on elucidating the functional mechanisms of 
-                                            the brain underlying its robust and reliable outputs/inputs
+                                            My main research focus is on elucidating the functional mechanisms 
+                                            <!-- of the brain underlying its robust and reliable outputs/inputs -->
                                             and applying these insights to design novel computational tools 
                                             for decoding/encoding neural activity for medical applications, including neuroprosthetics and neurorehabilitation. 
                                             
