--- a/index.html
+++ b/index.html
@@ -207,23 +207,21 @@
                                             <a href="https://www.feinberg.northwestern.edu/faculty-profiles/az/profile.html?xid=16463" target="_blank" rel="nooper" style="color: rgb(20, 120, 110)">Dr. Marc Slutzky</a> 
                                             and co-supervised by 
                                             <a href="https://www.feinberg.northwestern.edu/faculty-profiles/az/profile.html?xid=56122" target="_blank" rel="nooper" style="color: rgb(20, 120, 110)">Dr. Joshua Glaser</a>.
-                                            I completed my bachelor's thesis at Meiji University, supervised by 
+                                            I completed my bachelor's thesis at Meiji University under the guidance of
                                             <a href="https://www.isc.meiji.ac.jp/~yumie/Eintroduction.html" target="_blank" rel="nooper" style="color: rgb(20, 120, 110)">Dr. Yumie Ono</a>,   
-                                            while also gaining experience as a research assistant at the University at Buffalo and the University of Lincoln under 
+                                            while also gaining experience as a research assistant at the University at Buffalo (SUNY Buffalo) and the University of Lincoln under 
                                             <a href="https://www.birmingham.ac.uk/staff/profiles/metabolism-systems/dutta-anirban" target="_blank" rel="nooper" style="color: rgb(20, 120, 110)"> Dr. Anirban Dutta</a>.
                                             <br><br>
-                                            My main research focus is on elucidating the functional mechanisms 
-                                            <!-- of the brain underlying its robust and reliable outputs/inputs -->
-                                            and applying these insights to design novel computational tools 
+                                            My main research focus lies in understanding brain functions to design novel computational tools 
                                             for decoding/encoding neural activity for medical applications, including neuroprosthetics and neurorehabilitation. 
                                             
-                                            As my master's thesis, I am currently investigating neural signatures related to speech intent in non-frontal areas, 
+                                            For my master's thesis, I am currently investigating neural signatures associated with speech intent in non-frontal brain regions, 
                                             aiming to decode distinctive phoneme features and ultimately establish a speech brain-computer interface (BCI) for aphasic patients with frontal lobe damage. 
-                                            My previous projects include establishing objective metrics for surgical skill assessment (Manabe et al. 
+                                            My previous projects include developing objective metrics for surgical skill assessment (Manabe et al. 
                                             <a href="https://www.xcdsystem.com/iitsec/proceedings/index.cfm?Year=2022&CID=944&AbID=112532" target="_blank" rel="nooper" style="color: rgb(20, 120, 110)">2022</a>, 
                                             <a href="https://www.mdpi.com/2076-3425/13/12/1706" target="_blank" rel="nooper" style="color: rgb(20, 120, 110)">2023</a>, 
                                             <a href="https://shop.elsevier.com/books/biomedical-robots-and-devices-in-healthcare/iqbal/978-0-443-22206-1" target="_blank" rel="nooper" style="color: rgb(20, 120, 110)">2024</a>) 
-                                            and investigating effective connectivity in stroke neurorehabilitation (Manabe et al. 2023 and 
+                                            and studying effective connectivity in stroke neurorehabilitation (Manabe et al. 2023 and 
                                             <a href="https://ieeexplore.ieee.org/abstract/document/10317207" target="_blank" rel="nooper" style="color: rgb(20, 120, 110)">Kanaizuka et al. 2023</a>). 
                                             <!-- <br><br> -->
                                             <!-- Projects page will be soon updated! -->
