--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
             /* 楕円 */
             .outer_ellipse {
-                width: 13vw;
-                height: 17vw;
+                width: 200px;
+                height: 300px;
                 border: 5px double #d3d3d3;
                 border-radius: 50%;
                 overflow: hidden;
@@ -59,8 +59,8 @@
             /* スマホ用サイズ */
             @media (max-width: 576px) {
                 .outer_ellipse {
-                    width: 50vw;  /* スマホ時は50vwに拡大 */
-                    height: 75vw; /* 比例して高さも拡大 */
+                    width: 32vw;  /* スマホ時は50vwに拡大 */
+                    height: 48vw; /* 比例して高さも拡大 */
                 }
             }
 
@@ -188,7 +188,7 @@
                     <div class="row gx-6 align-items-top">
                         
                         <!-- 左カラム：画像エリア -->
-                        <div class="col-xxl-4 d-flex justify-content-center mb-5 mb-xxl-0">
+                        <div class="col-lg-4 d-flex justify-content-center mb-5 mb-lg-0">
                             <div class="outer_ellipse">
                                 <div class="inner_ellipse">
                                   <img class="ellipse_image" src="assets/profile.jpeg" alt="Profile image" />
@@ -197,7 +197,7 @@
                         </div>
 
 
-                        <div class="col-xxl-8">
+                        <div class="col-lg-8">
                             <div class="text-start text-xxl-start">
                                 <div class="fs-3 text-muted">About</div>
                                     <div class="p-1">
