--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+
+        <!-- xs	～576px未満	超小さいデバイス（既定値）
+        sm	576px以上 ～768px未満	小さいデバイス
+        md	768px以上 ～992px未満	中くらいのデバイス
+        lg	992px以上 ～1200px未満	大きいデバイス
+        xl	1200px以上 ～1400px未満	非常に大きいデバイス
+        xxl	1400px以上	最大級のデバイス -->
+
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Main" />
@@ -197,7 +205,7 @@
                             </div>
                             <div class="ms-5 ms-lg-0 mt-0 mt-lg-3">
                                 <!-- Memo: 小画面は中央揃え、lg以上も中央揃え -->
-                                <h3 class="fw-bold text-center text-lg-center border-bottom pb-2">Takahiro Manabe</h3>
+                                <h3 class="fw-bold text-center text-lg-center ms-2 me-2 ms-lg-5 me-lg-5 border-bottom pb-2" style="color: #3b3b3b;">Takahiro Manabe</h3>
                                 <!-- Biomedical ... は常に左揃え -->
                                 <p class="mb-0 text-center ms-4 me-4" style="font-size: 14px;">
                                     Biomedical Engineering Master's Student at Northwestern
@@ -240,7 +248,7 @@
                                     </div>
 
                                     <!-- Buttons for cv and project-->
-                                    <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
+                                    <div class="d-grid gap-3 d-sm-flex justify-content-center justify-content-lg-start mb-3">
                                         <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="materials/CV_TakahiroManabe.pdf">Curriculum Vitae</a>
                                         <!-- <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projects</a> -->
                                     </div>
