--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
 
                         <div class="col-lg-8">
-                            <div class="text-start text-xxl-start">
+                            <div class="text-start">
                                 <div class="fs-3 text-muted">About</div>
                                     <div class="p-1">
                                         <p style="font-size: 18px;">I am currently a second-year Master's student in the 
@@ -288,7 +288,7 @@
         <!-- Footer-->
         <footer class="bg-light py-4 mt-auto">
             <div class="container px-5">
-                <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+                <div class="row align-items-center justify-content-between flex-column flex-lg-row">
                     <div class="col-auto">
                         <div class="small m-0">&copy; Takahiro Manabe.  All Rights Reserved.</div>
                     </div>
