--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
                                     <!-- Buttons for cv and project-->
                                     <div class="d-grid gap-3 d-sm-flex justify-content-center justify-content-lg-start mb-3">
-                                        <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="materials/CV_TakahiroManabe.pdf">Curriculum Vitae</a>
+                                        <a class="btn btn-dark btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="materials/CV_TakahiroManabe.pdf">Curriculum Vitae</a>
                                         <!-- <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html">Projects</a> -->
                                     </div>
                             </div>
