--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
         
         <style> /* (CSS) */
 
+            /* ナビゲーションバー分の余白(Boostrapデフォ＝56) */
+            body {
+                padding-top: 100px; /* ナビゲーションバーの高さ分 */
+            }
+
             /* フェードイン */
             .fade-in {
                 opacity: 0;
@@ -161,7 +166,7 @@
         <main class="flex-grow-1">
 
             <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
+            <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 fixed-top">
                 <div class="container d-flex align-items-center position-relative">
                     
                     <!-- Right: Toggle -->
