--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
                         <div class="col-lg-8">
                             <div class="text-start">
-                                <div class="fs-3 text-muted">About</div>
+                                <div class="fs-3 text-muted ms-1">About</div>
                                     <div class="p-1">
                                         <p class="responsive_text">I am currently a second-year Master's student in the 
                                             <a href="https://www.mccormick.northwestern.edu/biomedical/academics/graduate/" target="_blank" rel="nooper" style="color: rgb(20, 120, 110)">Biomedical Engineering</a>
