--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@
                     <i class="fab fa-facebook-f" style="font-size: 20px;"></i>
                 </a>
             </li>
-            <li class="nav-item me-3">
+            <!-- <li class="nav-item me-3">
                 <a class="nav-link" href="https://www.linkedin.com/in/takahiro-manabe-45a692238/" target="_blank" aria-label="LinkedIn">
                     <i class="fab fa-linkedin-in" style="font-size: 20px;"></i>
                 </a>
-            </li>
+            </li> -->
             <li class="nav-item me-3">
                 <a class="nav-link" href="https://scholar.google.com/citations?user=fl20Q-0AAAAJ&hl" target="_blank" aria-label="Google Scholar">
                     <i class="fas fa-graduation-cap" style="font-size: 20px;"></i>
