--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                                             <a href="https://www.birmingham.ac.uk/staff/profiles/metabolism-systems/dutta-anirban" target="_blank" rel="nooper" style="color: rgb(20, 120, 110)"> Dr. Anirban Dutta</a>.
                                             <br><br>
                                             My main research focus lies in understanding brain functions to design novel computational tools 
-                                            for decoding/encoding neural activity for medical applications, including neuroprosthetics and neurorehabilitation. 
+                                            for decoding/encoding neural activity for applications such as neuroprosthetics and neurorehabilitation. 
                                             
                                             For my master's thesis, I am currently investigating neural signatures associated with speech intent in non-frontal brain regions, 
                                             aiming to decode distinctive phoneme features and ultimately establish a speech brain-computer interface (BCI) for aphasic patients with frontal lobe damage. 
