--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
                                             while also gaining experience as a research assistant at the University at Buffalo (SUNY Buffalo) and the University of Lincoln under 
                                             <a href="https://www.birmingham.ac.uk/staff/profiles/metabolism-systems/dutta-anirban" target="_blank" rel="nooper" style="color: rgb(20, 120, 110)"> Dr. Anirban Dutta</a>.
                                             <br><br>
-                                            My main research focus lies in understanding brain functions to design novel computational tools 
-                                            for decoding/encoding neural activity for applications such as neuroprosthetics and neurorehabilitation. 
+                                            My primary research focus lies in understanding brain functions and developing novel computational tools 
+                                            for neural decoding and encoding, with the goal of enhancing interventions for neurological disorders.
                                             
                                             For my master's thesis, I am currently investigating neural signatures associated with speech intent in non-frontal brain regions, 
                                             aiming to decode distinctive phoneme features and ultimately establish a speech brain-computer interface (BCI) for aphasic patients with frontal lobe damage. 
